# swsv2

./: Cargo.toml  README.md
src/: lib.rs
src/http/: server.rs
src/middlewares/: controller.rs  init.rs  mod.rs  routing.rs
src/network_adaptor/: transport.rs
src/parser/: http.rs
src/pool/: mod.rs  pool_test.rs  thread.rs
src/serializer_deserializer/: lib.rs  mod.rs  test.rs
src/storage/: store.rs
src/types/: custom.rs
